--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rpsgame</title>
+    <link rel="stylesheet" href="./css/style.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    
+    <div class="topscore">
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Player</h3>
+            <h4>0</h4>
+        </div>
+        <div class="col-md-6">
+            <h3>Computer</h3>
+            <h4>0</h4>
+        </div>
+    </div>
+    </div>
+   <div class="imgcont">
+ <div class="row">
+    <div class="col-md-6 img">
+        <img src="./images/uicon.png" alt="">
+    </div>
+    <div class="col-md-6 img">
+        <img src="./images/cicon.png" alt="">
+    </div>
+ </div>
+  
+</div>
+    <div class="buttonsgrp">
+        <div class="row">
+    <div class="col-md-4">
+    <button class="btn btn-outline-warning">rock</button>
+</div>
+<div class="col-md-4">
+    <button class="btn btn-outline-warning">paper</button>
+</div>
+<div class="col-md-4">
+    <button class="btn btn-outline-warning">scissor</button>
+</div>
+   </div>
+</div>
 </body>
 </html>
