--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    <div id="overall">
     <div class="topscore">
     <div class="row">
         <div class="col-md-6">
-            <h3>Player</h3>
+            <h3 id="pname">Player</h3>
             <h4 id="uscore">0</h4>
         </div>
         <div class="col-md-6">
@@ -22,7 +23,6 @@
         </div>
     </div>
   
-      
   <h2 id="resultcont">Let's play</h2>
     
 
@@ -51,6 +51,11 @@
     <button class="btn btn-outline-warning" value="scissor" id="rock" onclick="btnvalue(this.value)">scissor</button>
 </div>
    </div>
+</div>
+</div>
+<div id="resultdiv">
+<h1 id="result"></h1>
+<a href="index.html" class="btn btn-outline-warning">Play again</a>
 </div>
 <script src="js/main.js"></script>
 </body>
