--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div id="overall">
+    <!-- <div id="overall">
     <div class="topscore">
     <div class="row">
         <div class="col-md-6">
@@ -56,6 +56,40 @@
 <div id="resultdiv">
 <h1 id="result"></h1>
 <a href="index.html" class="btn btn-outline-warning">Play again</a>
+</div> -->
+<div class="overall">
+    <div class="score">
+        <div class="scorelist">
+            <h3 id="pname">Player</h3>
+            <h4 id="uscore">0</h4>
+        </div>
+        <div class="scorelist">
+            <h3>Computer</h3>
+            <h4 id="cscore">0</h4>
+        </div>
+    </div>
+</div>
+<div class="resultboard">
+    <h2 id="resultcont">Let's play</h2>
+</div><br>
+<div class="imagecontainer">
+    <div class="imgbox">
+        <img src="./images/uicon.png" alt="" id="userimg">
+    </div>
+    <div class="imgbox">
+        <img src="./images/cicon.png" alt="" id="compimg">
+    </div>
+</div><br><br><br><br><br>
+<div class="buttoncontainer">
+    <div class="btncont">
+        <button class="btn btn-outline-warning" value="rock" id="rock" onclick="btnvalue(this.value)">rock</button>
+    </div>
+    <div class="btncont">
+        <button class="btn btn-outline-warning" value="paper" id="paper" onclick="btnvalue(this.value)">paper</button>
+    </div>
+    <div class="btncont">
+        <button class="btn btn-outline-warning" value="scissor" id="rock" onclick="btnvalue(this.value)">scissor</button>
+    </div>
 </div>
 <script src="js/main.js"></script>
 </body>
