--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
         <button class="btn btn-outline-warning" value="scissor" id="rock" onclick="btnvalue(this.value)">scissor</button>
     </div>
 </div>
-<script src="js/main.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
